# earcut-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: demo.py
earcut/: __init__.py  earcut.py  utils_3d.py
tests/: test_fixtures.py
